--- a/service_logger.ipynb
+++ b/service_logger.ipynb
@@ -155,7 +155,7 @@
     "        #setting up Redis connection\n",
     "        host = os.getenv('RedisHost', default = 'localhost')\n",
     "        port = os.getenv('RedisPort', default = '6379')\n",
-    "        password = os.getenv('RedisPass', default = 'sunmiai2020')\n",
+    "        password = os.getenv('RedisPass', default = 'idontknow')\n",
     "        r = Redis(host, port, password)\n",
     "        self.r = r\n",
     "    def test_put_onelog(self):\n",
